[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irotechlab-yt-search"
version = "1.0.0"
description = "YouTube search without official API - fast, reliable, and free"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "IrotechLab"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/irotechlab/irotechlab-yt-search"
Repository = "https://github.com/irotechlab/irotechlab-yt-search"
Documentation = "https://github.com/irotechlab/irotechlab-yt-search#readme"
"Bug Reports" = "https://github.com/irotechlab/irotechlab-yt-search/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["irotechlab_yt_search*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
